change resize on mobile and fix decimal button

--- a/style.css
+++ b/style.css
@@ -1,22 +1,37 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
 body {
+    min-height: 100vh;
+    background-color: antiquewhite;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
     row-gap: 10px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.header {
+    font-size: clamp(1rem, 10vw, 2rem);
+}
+
 .calculator {
-    width: 300px;
-    height: 470px;
+    width: 70vw;
+    max-height: 80vh;
     background-color: brown;
     border-radius: 40px;
     border: 10px black solid;
+    padding-bottom: 10px;
 }
 
 .top {
-    width: 300px;
-    height: 100px;
+    min-width: 60vw;
+    height: 15vh;
     background-color: rgb(75, 75, 75);
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
@@ -28,10 +43,10 @@ body {
 }
 
 .top p {
-    padding-right: 20px;
-    font-size: 50px;
+    padding-right: 0;
+    font-size: clamp(4rem, 10vw, 20rem);
     font-weight: 600;
-    color: #ffffff;
+    color: brown;
 }
 
 
@@ -41,7 +56,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    row-gap: 8px;
+    gap: 8px;
 }
 
 .firstrow {
@@ -50,9 +65,9 @@ body {
 }
 
 .firstrow .circle {
-    width: 60px;
-    height: 60px;
-    border-radius: 100%;
+    width: 10vw;
+    height: 10vh;
+    border-radius: 50%;
     background-color: rgb(95, 24, 24);
 
 }
@@ -60,21 +75,21 @@ body {
 .lastrow {
     display: flex;
     gap: 8px;
-    align-self: flex-end;
+    align-self: center;
     margin-right: 16px;
 }
 
 .lastrow .circle {
-    width: 60px;
-    height: 60px;
+    width: 10vw;
+    height: 10vh;
     border-radius: 100%;
     background-color: rgb(95, 24, 24);
     
 }
 
 .long {
-    width: 120px;
-    height: 60px;
+    width: 20vw;
+    height: 10vh;
     border-radius: 30px;
     background-color: rgb(95, 24, 24);
     display: flex;
@@ -94,8 +109,8 @@ body {
     color: #ffffff;
     font-size: 30px;
     font-weight: 600;
-    width: 60px;
-    height: 60px;
+    width: 10vh;
+    height: 10vh;
     border-radius: 100%;
 }
 
@@ -105,8 +120,8 @@ body {
     color: #ffffff;
     font-size: 30px;
     font-weight: 600;
-    width: 120px;
-    height: 60px;
+    width: 20vw;
+    height: 10vh;
     border-radius: 30px;
 }
 
@@ -114,4 +129,8 @@ body {
 .circle:hover,
 .long:hover {
     background-color: rgb(51, 14, 14);
+}
+
+.input {
+    padding-right: 0;
 }
